# ptx_dump_testing

./: CMakeLists.txt  Makefile  main.cpp  matrix_mult.cpp  matrix_ops.hpp  nvidia_mat_mul.cpp
