cmake_minimum_required(VERSION 3.5.1)

project(matrix_ops VERSION 1.0.0 LANGUAGES CXX)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)


add_executable(${PROJECT_NAME}  ./nvidia_mat_mul.cpp)
        
install(TARGETS ${PROJECT_NAME}  RUNTIME DESTINATION bin)
